--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kagglehub\n",
-      "  Downloading kagglehub-0.3.12-py3-none-any.whl.metadata (38 kB)\n",
+      "Requirement already satisfied: kagglehub in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (0.3.12)\n",
       "Requirement already satisfied: packaging in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from kagglehub) (25.0)\n",
       "Requirement already satisfied: pyyaml in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from kagglehub) (6.0.2)\n",
       "Requirement already satisfied: requests in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from kagglehub) (2.32.4)\n",
@@ -18,10 +17,7 @@
       "Requirement already satisfied: charset_normalizer<4,>=2 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->kagglehub) (3.4.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->kagglehub) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->kagglehub) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->kagglehub) (2025.6.15)\n",
-      "Downloading kagglehub-0.3.12-py3-none-any.whl (67 kB)\n",
-      "Installing collected packages: kagglehub\n",
-      "Successfully installed kagglehub-0.3.12\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->kagglehub) (2025.6.15)\n"
      ]
     }
    ],
@@ -31,44 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/nofalrafif/cat-skin-disease?dataset_version_number=3...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|█▌        | 9.00M/57.7M [00:00<00:00, 94.1MB/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 57.7M/57.7M [00:00<00:00, 97.1MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -88,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,37 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/youssefmohmmed/dogs-skin-diseases-image-dataset?dataset_version_number=1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 219M/219M [00:01<00:00, 145MB/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -152,6 +85,44 @@
     "path_dog2 = kagglehub.dataset_download(\"youssefmohmmed/dogs-skin-diseases-image-dataset\")\n",
     "\n",
     "print(\"Path to dataset files:\", path_dog2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['python', 'convert_datasets.py', '--dogs1', '/teamspace/studios/this_studio/.cache/kagglehub/datasets/yashmotiani/dogs-skin-disease-dataset/versions/1', '--dogs2', '/teamspace/studios/this_studio/.cache/kagglehub/datasets/youssefmohmmed/dogs-skin-diseases-image-dataset/versions/1', '--cats', '/teamspace/studios/this_studio/.cache/kagglehub/datasets/nofalrafif/cat-skin-disease/versions/3', '--out', 'data/qwen25-dataset', '--max-images', '10'], returncode=0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "output_dir = \"data/qwen25-dataset\"\n",
+    "max_images = 10\n",
+    "\n",
+    "# Inherit current env and add GEMINI_API_KEY\n",
+    "env = os.environ.copy()\n",
+    "env[\"GEMINI_API_KEY\"] = \"\"\n",
+    "\n",
+    "# Run subprocess with env\n",
+    "subprocess.run([\n",
+    "    \"python\", \"convert_datasets.py\",\n",
+    "    \"--dogs1\", path_dog1,\n",
+    "    \"--dogs2\", path_dog2,\n",
+    "    \"--cats\", path,\n",
+    "    \"--out\", output_dir,\n",
+    "    \"--max-images\", str(max_images)\n",
+    "], env=env)\n"
    ]
   }
  ],
