--- a/fine_tuning.ipynb
+++ b/fine_tuning.ipynb
@@ -9,46 +9,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting transformers\n",
-      "  Downloading transformers-4.53.1-py3-none-any.whl.metadata (40 kB)\n",
-      "Collecting accelerate\n",
-      "  Downloading accelerate-1.8.1-py3-none-any.whl.metadata (19 kB)\n",
-      "Collecting peft\n",
-      "  Downloading peft-0.16.0-py3-none-any.whl.metadata (14 kB)\n",
-      "Collecting bitsandbytes\n",
-      "  Downloading bitsandbytes-0.46.1-py3-none-manylinux_2_24_x86_64.whl.metadata (10 kB)\n",
-      "Collecting qwen-vl-utils==0.0.8 (from qwen-vl-utils[decord]==0.0.8)\n",
-      "  Downloading qwen_vl_utils-0.0.8-py3-none-any.whl.metadata (3.6 kB)\n",
-      "Collecting av (from qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8)\n",
-      "  Downloading av-15.0.0-cp310-cp310-manylinux_2_28_x86_64.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: transformers in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (4.53.1)\n",
+      "Requirement already satisfied: accelerate in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (1.8.1)\n",
+      "Requirement already satisfied: peft in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (0.16.0)\n",
+      "Requirement already satisfied: bitsandbytes in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (0.46.1)\n",
+      "Requirement already satisfied: qwen-vl-utils==0.0.8 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils[decord]==0.0.8) (0.0.8)\n",
+      "Requirement already satisfied: av in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (15.0.0)\n",
       "Requirement already satisfied: packaging in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (25.0)\n",
       "Requirement already satisfied: pillow in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (11.2.1)\n",
       "Requirement already satisfied: requests in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (2.32.4)\n",
-      "Collecting decord (from qwen-vl-utils[decord]==0.0.8)\n",
-      "  Downloading decord-0.6.0-py3-none-manylinux2010_x86_64.whl.metadata (422 bytes)\n",
+      "Requirement already satisfied: decord in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from qwen-vl-utils[decord]==0.0.8) (0.6.0)\n",
       "Requirement already satisfied: filelock in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (3.18.0)\n",
-      "Collecting huggingface-hub<1.0,>=0.30.0 (from transformers)\n",
-      "  Downloading huggingface_hub-0.33.2-py3-none-any.whl.metadata (14 kB)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (0.33.2)\n",
       "Requirement already satisfied: numpy>=1.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (1.26.4)\n",
       "Requirement already satisfied: pyyaml>=5.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (6.0.2)\n",
-      "Collecting regex!=2019.12.17 (from transformers)\n",
-      "  Downloading regex-2024.11.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
-      "Collecting tokenizers<0.22,>=0.21 (from transformers)\n",
-      "  Downloading tokenizers-0.21.2-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.8 kB)\n",
-      "Collecting safetensors>=0.4.3 (from transformers)\n",
-      "  Downloading safetensors-0.5.3-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (2024.11.6)\n",
+      "Requirement already satisfied: tokenizers<0.22,>=0.21 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (0.21.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.3 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (0.5.3)\n",
       "Requirement already satisfied: tqdm>=4.27 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from transformers) (4.67.1)\n",
       "Requirement already satisfied: fsspec>=2023.5.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (2025.5.1)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (4.14.0)\n",
-      "Collecting hf-xet<2.0.0,>=1.1.2 (from huggingface-hub<1.0,>=0.30.0->transformers)\n",
-      "  Downloading hf_xet-1.1.5-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (879 bytes)\n",
+      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.2 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (1.1.5)\n",
       "Requirement already satisfied: psutil in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from accelerate) (7.0.0)\n",
       "Requirement already satisfied: torch>=2.0.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from accelerate) (2.7.0+cu128)\n",
       "Requirement already satisfied: sympy>=1.13.3 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from torch>=2.0.0->accelerate) (1.14.0)\n",
@@ -75,29 +63,7 @@
       "Requirement already satisfied: charset_normalizer<4,>=2 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (3.4.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (2025.6.15)\n",
-      "Downloading qwen_vl_utils-0.0.8-py3-none-any.whl (5.9 kB)\n",
-      "Downloading transformers-4.53.1-py3-none-any.whl (10.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.8/10.8 MB\u001b[0m \u001b[31m123.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading huggingface_hub-0.33.2-py3-none-any.whl (515 kB)\n",
-      "Downloading hf_xet-1.1.5-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m135.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tokenizers-0.21.2-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m135.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading accelerate-1.8.1-py3-none-any.whl (365 kB)\n",
-      "Downloading peft-0.16.0-py3-none-any.whl (472 kB)\n",
-      "Downloading bitsandbytes-0.46.1-py3-none-manylinux_2_24_x86_64.whl (72.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m72.9/72.9 MB\u001b[0m \u001b[31m170.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading regex-2024.11.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (781 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m781.7/781.7 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading safetensors-0.5.3-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (471 kB)\n",
-      "Downloading av-15.0.0-cp310-cp310-manylinux_2_28_x86_64.whl (39.2 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m39.2/39.2 MB\u001b[0m \u001b[31m160.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading decord-0.6.0-py3-none-manylinux2010_x86_64.whl (13.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.6/13.6 MB\u001b[0m \u001b[31m155.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: safetensors, regex, hf-xet, decord, av, qwen-vl-utils, huggingface-hub, tokenizers, transformers, bitsandbytes, accelerate, peft\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12/12\u001b[0m [peft]2m11/12\u001b[0m [peft]erate]s]ub]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed accelerate-1.8.1 av-15.0.0 bitsandbytes-0.46.1 decord-0.6.0 hf-xet-1.1.5 huggingface-hub-0.33.2 peft-0.16.0 qwen-vl-utils-0.0.8 regex-2024.11.6 safetensors-0.5.3 tokenizers-0.21.2 transformers-4.53.1\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->qwen-vl-utils==0.0.8->qwen-vl-utils[decord]==0.0.8) (2025.6.15)\n"
      ]
     }
    ],
@@ -115,17 +81,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "You have video processor config saved in `preprocessor.json` file which is deprecated. Video processor configs should be saved in their own `video_preprocessor.json` file. You can rename the file or load and save the processor back which renames it automatically. Loading from `preprocessor.json` will be removed in v5.0.\n",
+      "Loading checkpoint shards: 100%|██████████████████| 5/5 [00:37<00:00,  7.47s/it]\n",
+      "No label_names provided for model class `PeftModel`. Since `PeftModel` hides base models input arguments, if label_names is not given, label_names can't be set automatically within `Trainer`. Note that empty label_names list will be used instead.\n",
+      "  0%|                                                   | 0/441 [00:00<?, ?it/s][rank0]: Traceback (most recent call last):\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 180, in <module>\n",
+      "[rank0]:     main()\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 174, in main\n",
+      "[rank0]:     trainer.train()\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/trainer.py\", line 2206, in train\n",
+      "[rank0]:     return inner_training_loop(\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/trainer.py\", line 2502, in _inner_training_loop\n",
+      "[rank0]:     batch_samples, num_items_in_batch = self.get_batch_samples(epoch_iterator, num_batches, args.device)\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/trainer.py\", line 5300, in get_batch_samples\n",
+      "[rank0]:     batch_samples.append(next(epoch_iterator))\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/accelerate/data_loader.py\", line 567, in __iter__\n",
+      "[rank0]:     current_batch = next(dataloader_iter)\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 733, in __next__\n",
+      "[rank0]:     data = self._next_data()\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 789, in _next_data\n",
+      "[rank0]:     data = self._dataset_fetcher.fetch(index)  # may raise StopIteration\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/utils/data/_utils/fetch.py\", line 52, in fetch\n",
+      "[rank0]:     data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/utils/data/_utils/fetch.py\", line 52, in <listcomp>\n",
+      "[rank0]:     data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 52, in __getitem__\n",
+      "[rank0]:     data = self.processor(\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/models/qwen2_5_vl/processing_qwen2_5_vl.py\", line 150, in __call__\n",
+      "[rank0]:     image_inputs = self.image_processor(images=images, **output_kwargs[\"images_kwargs\"])\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/image_processing_utils.py\", line 44, in __call__\n",
+      "[rank0]:     return self.preprocess(images, **kwargs)\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/models/qwen2_vl/image_processing_qwen2_vl.py\", line 430, in preprocess\n",
+      "[rank0]:     patches, image_grid_thw = self._preprocess(\n",
+      "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/models/qwen2_vl/image_processing_qwen2_vl.py\", line 282, in _preprocess\n",
+      "[rank0]:     patches = patches.reshape(\n",
+      "[rank0]: ValueError: cannot reshape array of size 2457600 into shape (1,2,3,22,2,14,22,2,14)\n",
+      "  0%|                                                   | 0/441 [00:00<?, ?it/s]\n",
+      "[rank0]:[W708 10:32:05.335338800 ProcessGroupNCCL.cpp:1476] Warning: WARNING: destroy_process_group() was not called before program exit, which can leak resources. For more info, please see https://pytorch.org/docs/stable/distributed.html#shutdown (function operator())\n",
+      "E0708 10:32:08.085000 12811 /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/multiprocessing/api.py:874] failed (exitcode: 1) local_rank: 0 (pid: 12886) of binary: /home/zeus/miniconda3/envs/cloudspace/bin/python3.10\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/bin/torchrun\", line 8, in <module>\n",
+      "    sys.exit(main())\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py\", line 355, in wrapper\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/run.py\", line 892, in main\n",
+      "    run(args)\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/run.py\", line 883, in run\n",
+      "    elastic_launch(\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/launcher/api.py\", line 139, in __call__\n",
+      "    return launch_agent(self._config, self._entrypoint, list(args))\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/launcher/api.py\", line 270, in launch_agent\n",
+      "    raise ChildFailedError(\n",
+      "torch.distributed.elastic.multiprocessing.errors.ChildFailedError: \n",
+      "============================================================\n",
+      "run_finetune.py FAILED\n",
+      "------------------------------------------------------------\n",
+      "Failures:\n",
+      "  <NO_OTHER_FAILURES>\n",
+      "------------------------------------------------------------\n",
+      "Root Cause (first observed failure):\n",
+      "[0]:\n",
+      "  time      : 2025-07-08_10:32:08\n",
+      "  host      : cs-01jzmr8sazws699nhe2te7hd8s.us-central1-c.c.lightning-ai-prod.internal\n",
+      "  rank      : 0 (local_rank: 0)\n",
+      "  exitcode  : 1 (pid: 12886)\n",
+      "  error_file: <N/A>\n",
+      "  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html\n",
+      "============================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "# torchrun --nproc_per_node=2 run_finetune.py \\\n",
-    "#   --model qwen/Qwen2.5-VL-7B-Instruct \\\n",
-    "#   --data_dir path/to/your/data \\\n",
-    "#   --output_dir output/qwen-vet \\\n",
-    "#   --lora_rank 8 \\\n",
-    "#   --vision_tune adapter \\\n",
-    "#   --...other params...\n"
+    "!torchrun --nproc_per_node=1 run_finetune.py \\\n",
+    "  --model qwen/Qwen2.5-VL-7B-Instruct \\\n",
+    "  --data_dir test_data/ \\\n",
+    "  --output_dir output/qwen-vet \\\n",
+    "  --lora_rank 8 \\\n",
+    "  --num_train_epochs 3 \\\n",
+    "  --batch_size 3 \\\n",
+    "  --grad_accum 2"
    ]
   }
  ],
