--- a/test_data/gen.ipynb
+++ b/test_data/gen.ipynb
@@ -47,6 +47,64 @@
     "\n",
     "print(f\"Split complete: {len(train_records)} train / {len(val_records)} val\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Total images checked: 878\n",
+      "🔽 Min size: 640x640 = 409600 pixels\n",
+      "🔼 Max size: 640x640 = 409600 pixels\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from PIL import Image\n",
+    "\n",
+    "def load_jsonl(path):\n",
+    "    with open(path, \"r\") as f:\n",
+    "        return [json.loads(line) for line in f if line.strip()]\n",
+    "\n",
+    "def get_image_sizes(jsonl_path):\n",
+    "    records = load_jsonl(jsonl_path)\n",
+    "    sizes = []\n",
+    "\n",
+    "    for i, rec in enumerate(records):\n",
+    "        try:\n",
+    "            image_path = rec.get(\"image\")\n",
+    "            if not os.path.exists(image_path):\n",
+    "                continue\n",
+    "\n",
+    "            with Image.open(image_path) as img:\n",
+    "                img = img.convert(\"RGB\")\n",
+    "                width, height = img.size\n",
+    "                sizes.append((width, height))\n",
+    "        except Exception as e:\n",
+    "            print(f\"[WARN] Skipping index {i}: {e}\")\n",
+    "\n",
+    "    if not sizes:\n",
+    "        print(\"❌ No valid images found.\")\n",
+    "        return\n",
+    "\n",
+    "    # Convert to total pixels for sorting\n",
+    "    sizes_by_area = [(w, h, w * h) for w, h in sizes]\n",
+    "    min_size = min(sizes_by_area, key=lambda x: x[2])\n",
+    "    max_size = max(sizes_by_area, key=lambda x: x[2])\n",
+    "\n",
+    "    print(f\"✅ Total images checked: {len(sizes)}\")\n",
+    "    print(f\"🔽 Min size: {min_size[0]}x{min_size[1]} = {min_size[2]} pixels\")\n",
+    "    print(f\"🔼 Max size: {max_size[0]}x{max_size[1]} = {max_size[2]} pixels\")\n",
+    "\n",
+    "# Example usage\n",
+    "get_image_sizes(\"train.jsonl\")\n"
+   ]
   }
  ],
  "metadata": {
