--- a/fine_tuning.ipynb
+++ b/fine_tuning.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
      "text": [
       "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
       "You have video processor config saved in `preprocessor.json` file which is deprecated. Video processor configs should be saved in their own `video_preprocessor.json` file. You can rename the file or load and save the processor back which renames it automatically. Loading from `preprocessor.json` will be removed in v5.0.\n",
-      "Loading checkpoint shards: 100%|██████████████████| 5/5 [00:14<00:00,  2.94s/it]\n",
+      "Loading checkpoint shards: 100%|██████████████████| 5/5 [00:16<00:00,  3.26s/it]\n",
       "No label_names provided for model class `PeftModel`. Since `PeftModel` hides base models input arguments, if label_names is not given, label_names can't be set automatically within `Trainer`. Note that empty label_names list will be used instead.\n",
       "  0%|                                                   | 0/441 [00:00<?, ?it/s][WARN] Skipping idx=184: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[WARN] Skipping idx=185: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
@@ -966,12 +966,14 @@
       "[WARN] Skipping idx=177: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[WARN] Skipping idx=178: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[WARN] Skipping idx=179: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
+      "[WARN] Skipping idx=180: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
+      "[WARN] Skipping idx=181: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[WARN] Skipping idx=182: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[WARN] Skipping idx=183: ValueError: Invalid image tensor or patch grid. Shape: torch.Size([1176]), Grid: tensor([1, 2, 2])\n",
       "[rank0]: Traceback (most recent call last):\n",
-      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 209, in <module>\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 213, in <module>\n",
       "[rank0]:     main()\n",
-      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 203, in main\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 207, in main\n",
       "[rank0]:     trainer.train()\n",
       "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/transformers/trainer.py\", line 2206, in train\n",
       "[rank0]:     return inner_training_loop(\n",
@@ -989,12 +991,41 @@
       "[rank0]:     data = [self.dataset[idx] for idx in possibly_batched_index]\n",
       "[rank0]:   File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/utils/data/_utils/fetch.py\", line 52, in <listcomp>\n",
       "[rank0]:     data = [self.dataset[idx] for idx in possibly_batched_index]\n",
-      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 105, in __getitem__\n",
+      "[rank0]:   File \"/teamspace/studios/this_studio/run_finetune.py\", line 109, in __getitem__\n",
       "[rank0]:     raise RuntimeError(f\"All data records are invalid. Failed starting at idx={orig_idx}.\")\n",
       "[rank0]: RuntimeError: All data records are invalid. Failed starting at idx=184.\n",
-      "^C\n",
-      "W0708 11:48:54.837000 63078 /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/agent/server/api.py:719] Received Signals.SIGINT death signal, shutting down workers\n",
-      "W0708 11:48:54.838000 63078 /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/multiprocessing/api.py:900] Sending process 63193 closing signal SIGINT\n"
+      "  0%|                                                   | 0/441 [00:17<?, ?it/s]\n",
+      "[rank0]:[W708 12:09:24.553635421 ProcessGroupNCCL.cpp:1476] Warning: WARNING: destroy_process_group() was not called before program exit, which can leak resources. For more info, please see https://pytorch.org/docs/stable/distributed.html#shutdown (function operator())\n",
+      "E0708 12:09:26.130000 73249 /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/multiprocessing/api.py:874] failed (exitcode: 1) local_rank: 0 (pid: 73280) of binary: /home/zeus/miniconda3/envs/cloudspace/bin/python3.10\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/bin/torchrun\", line 8, in <module>\n",
+      "    sys.exit(main())\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py\", line 355, in wrapper\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/run.py\", line 892, in main\n",
+      "    run(args)\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/run.py\", line 883, in run\n",
+      "    elastic_launch(\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/launcher/api.py\", line 139, in __call__\n",
+      "    return launch_agent(self._config, self._entrypoint, list(args))\n",
+      "  File \"/home/zeus/miniconda3/envs/cloudspace/lib/python3.10/site-packages/torch/distributed/launcher/api.py\", line 270, in launch_agent\n",
+      "    raise ChildFailedError(\n",
+      "torch.distributed.elastic.multiprocessing.errors.ChildFailedError: \n",
+      "============================================================\n",
+      "run_finetune.py FAILED\n",
+      "------------------------------------------------------------\n",
+      "Failures:\n",
+      "  <NO_OTHER_FAILURES>\n",
+      "------------------------------------------------------------\n",
+      "Root Cause (first observed failure):\n",
+      "[0]:\n",
+      "  time      : 2025-07-08_12:09:26\n",
+      "  host      : cs-01jzmr8sazws699nhe2te7hd8s.us-central1-c.c.lightning-ai-prod.internal\n",
+      "  rank      : 0 (local_rank: 0)\n",
+      "  exitcode  : 1 (pid: 73280)\n",
+      "  error_file: <N/A>\n",
+      "  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html\n",
+      "============================================================\n"
      ]
     }
    ],
@@ -1007,114 +1038,6 @@
     "  --num_train_epochs 3 \\\n",
     "  --batch_size 3 \\\n",
     "  --grad_accum 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List\n",
-    "import json\n",
-    "\n",
-    "def load_jsonl(path: str) -> List[dict]:\n",
-    "    records = []\n",
-    "    with open(path, \"r\") as f:\n",
-    "        for line in f:\n",
-    "            line = line.strip()\n",
-    "            if line:\n",
-    "                records.append(json.loads(line))\n",
-    "    return records"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rec = load_jsonl(\"test_data/train.jsonl\")[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'image': '/teamspace/studios/this_studio/.cache/kagglehub/datasets/youssefmohmmed/dogs-skin-diseases-image-dataset/versions/1/test/Dermatitis/May-is-allergy-awareness-month-here-at-The-Shot-Spot_02176_jpg.rf.9e9d261224278a3327050d94a55dd859.jpg',\n",
-       " 'conversations': [{'from': 'human',\n",
-       "   'value': \"My dog has these red, inflamed spots on his skin, and every time we think we've treated them, a new one pops up. What could be wrong with him?\"},\n",
-       "  {'from': 'gpt',\n",
-       "   'value': \"It sounds like your dog may be suffering from dermatitis, which is a common skin condition. This can be caused by various factors like allergies, infections, parasites, or irritants. \\n\\nSymptoms can include redness, itching, inflammation, bumps, or sores on the skin. \\n\\nFor home remedies, you can try giving your dog a cool bath with oatmeal or a veterinary-approved hypoallergenic shampoo. Applying a cool compress to the affected area might also offer some relief. \\n\\nPrevention involves identifying and removing potential allergens or irritants from your dog's environment, ensuring a balanced diet, and maintaining good hygiene. Regular grooming can also help spot issues early. \\n\\nIf the condition is severe, spreading rapidly, or if your dog is in distress, seek emergency veterinary care. Otherwise, it is recommended to consult a veterinarian. While AI can provide information, it's not a substitute for professional veterinary diagnosis and treatment.\"}]}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rec[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "\n",
-    "image_path = rec[0]['image']  # Replace with the actual path\n",
-    "img = Image.open(image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ Good images: 878\n",
-      "❌ Bad images: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "from PIL import Image\n",
-    "import json\n",
-    "import os\n",
-    "\n",
-    "jsonl_path = \"test_data/train.jsonl\"  # adjust as needed\n",
-    "bad = []\n",
-    "ok = []\n",
-    "\n",
-    "with open(jsonl_path) as f:\n",
-    "    for i, line in enumerate(f):\n",
-    "        try:\n",
-    "            rec = json.loads(line)\n",
-    "            image_path = rec[\"image\"]\n",
-    "            assert os.path.exists(image_path), f\"File not found: {image_path}\"\n",
-    "            img = Image.open(image_path).convert(\"RGB\")\n",
-    "            img.verify()  # Check for corrupted files\n",
-    "            ok.append(image_path)\n",
-    "        except Exception as e:\n",
-    "            bad.append((i, image_path, str(e)))\n",
-    "\n",
-    "print(f\"\\n✅ Good images: {len(ok)}\")\n",
-    "print(f\"❌ Bad images: {len(bad)}\")\n",
-    "if bad:\n",
-    "    print(\"Examples of bad ones:\")\n",
-    "    for item in bad[:5]:\n",
-    "        print(item)\n"
    ]
   }
  ],
