--- a/test_data/gen.ipynb
+++ b/test_data/gen.ipynb
@@ -105,6 +105,136 @@
     "# Example usage\n",
     "get_image_sizes(\"train.jsonl\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅  Wrote 878 records to train.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "jsonl_to_json.py\n",
+    "Convert file.jsonl  ➜  file.json\n",
+    "Usage:  python jsonl_to_json.py input.jsonl output.json\n",
+    "\"\"\"\n",
+    "\n",
+    "import json\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def jsonl_to_json(src_path: str, dst_path: str) -> None:\n",
+    "    # Load every line as an individual JSON object\n",
+    "    with open(src_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        records = [json.loads(line) for line in f if line.strip()]\n",
+    "\n",
+    "    # Save as one JSON array (pretty-printed, 2-space indent)\n",
+    "    with open(dst_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(records, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"✅  Wrote {len(records)} records to {dst_path}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    src, dst = \"train.jsonl\", \"train.json\"\n",
+    "    if not Path(src).is_file():\n",
+    "        sys.exit(f\"❌  Input file not found: {src}\")\n",
+    "\n",
+    "    jsonl_to_json(src, dst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅  Wrote 878 records to train_prefix.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "PREFIX = \"../../../..\"          # what you want to prepend\n",
+    "\n",
+    "\n",
+    "def process_json(src: Path, dst: Path) -> None:\n",
+    "    \"\"\"Handle a single JSON array.\"\"\"\n",
+    "    records = json.load(src.open())\n",
+    "    for rec in records:\n",
+    "        if \"image\" in rec:\n",
+    "            rec[\"image\"] = f\"{PREFIX}{rec['image']}\"\n",
+    "    json.dump(records, dst.open(\"w\"), ensure_ascii=False, indent=2)\n",
+    "    print(f\"✅  Wrote {len(records)} records to {dst}\")\n",
+    "\n",
+    "\n",
+    "def process_jsonl(src: Path, dst: Path) -> None:\n",
+    "    \"\"\"Handle line-delimited JSON (jsonl).\"\"\"\n",
+    "    total = 0\n",
+    "    with src.open() as fin, dst.open(\"w\") as fout:\n",
+    "        for line in fin:\n",
+    "            if not line.strip():\n",
+    "                continue\n",
+    "            rec = json.loads(line)\n",
+    "            if \"image\" in rec:\n",
+    "                rec[\"image\"] = f\"{PREFIX}{rec['image']}\"\n",
+    "            fout.write(json.dumps(rec, ensure_ascii=False) + \"\\n\")\n",
+    "            total += 1\n",
+    "    print(f\"✅  Wrote {total} lines to {dst}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    src_path = Path(\"train.json\")\n",
+    "    dst_path = Path(\"train_prefix.json\")\n",
+    "\n",
+    "\n",
+    "    process_json(src_path, dst_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ wrote train_wtoken.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json, sys, os\n",
+    "TOKEN = \"<image>\\n\"          # or whatever DEFAULT_IMAGE_TOKEN equals\n",
+    "\n",
+    "src = \"train_prefix.json\"      # input\n",
+    "dst = \"train_wtoken.json\"\n",
+    "\n",
+    "records = json.load(open(src))\n",
+    "for rec in records:\n",
+    "    if \"image\" in rec:\n",
+    "        first = rec[\"conversations\"][0]\n",
+    "        if first[\"from\"] == \"human\" and TOKEN not in first[\"value\"]:\n",
+    "            first[\"value\"] = f\"{TOKEN}{first['value']}\"\n",
+    "\n",
+    "json.dump(records, open(dst, \"w\"), ensure_ascii=False, indent=2)\n",
+    "print(\"✅ wrote\", dst)\n"
+   ]
   }
  ],
  "metadata": {
